--- a/Organic_Launch/Organic_Launch/Organic_Launch.csproj
+++ b/Organic_Launch/Organic_Launch/Organic_Launch.csproj
@@ -243,6 +243,7 @@
     <Content Include="scripts\jquery-1.9.1.min.map" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Product\List.cshtml" />
+    <Content Include="Views\Shared\_SideBar.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
