--- a/Organic_Launch/Organic_Launch/Organic_Launch.csproj
+++ b/Organic_Launch/Organic_Launch/Organic_Launch.csproj
@@ -239,6 +239,7 @@
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
     <Content Include="scripts\jquery-1.9.1.min.map" />
+    <Content Include="Views\Account\RegisterWithUs.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -249,7 +250,6 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Models\" />
-    <Folder Include="Views\Account\" />
     <Folder Include="Views\Farm\" />
     <Folder Include="Views\Product\" />
   </ItemGroup>
