--- a/Organic_Launch/Organic_Launch/Web.config
+++ b/Organic_Launch/Organic_Launch/Web.config
@@ -9,8 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=brown.mysitehosted.com;Initial Catalog=FoodSaleAuth;User ID=usermanager;Password=SchoolProject" providerName="System.Data.SqlClient" />
-   <add name="FoodSaleAuthEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=brown.mysitehosted.com;initial catalog=FoodSaleAuth;persist security info=True;user id=usermanager;password=SchoolProject;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+    <add name="DefaultConnection" connectionString="Data Source=brown.mysitehosted.com;Initial Catalog=FarmSaleAuth;User ID=usermanager;Password=SchoolProject" providerName="System.Data.SqlClient" />
+   <add name="FoodSaleAuthEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=brown.mysitehosted.com;initial catalog=FarmSaleDB;persist security info=True;user id=usermanager;password=SchoolProject;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
