--- a/Organic_Launch/Organic_Launch/Organic_Launch.csproj
+++ b/Organic_Launch/Organic_Launch/Organic_Launch.csproj
@@ -172,6 +172,16 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\Site.css" />
+    <Content Include="FarmSaleDB.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>FarmSaleDB.edmx</DependentUpon>
+      <LastGenOutput>FarmSaleDB.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="FarmSaleDB.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>FarmSaleDB.edmx</DependentUpon>
+      <LastGenOutput>FarmSaleDB.cs</LastGenOutput>
+    </Content>
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Model1.Context.tt">
@@ -201,6 +211,13 @@
     <Content Include="Model1.edmx.diagram">
       <DependentUpon>Model1.edmx</DependentUpon>
     </Content>
+    <EntityDeploy Include="FarmSaleDB.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>FarmSaleDB.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <Content Include="FarmSaleDB.edmx.diagram">
+      <DependentUpon>FarmSaleDB.edmx</DependentUpon>
+    </Content>
     <None Include="scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="scripts\jquery-1.10.2.js" />
     <Content Include="scripts\jquery-1.10.2.min.js" />
@@ -224,6 +241,15 @@
     <Content Include="Views\Home\IndexSecurity.cshtml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Account.cs">
+      <DependentUpon>FarmSaleDB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="AccountDetail.cs">
+      <DependentUpon>FarmSaleDB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Address.cs">
+      <DependentUpon>FarmSaleDB.tt</DependentUpon>
+    </Compile>
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="AspNetRole.cs">
       <DependentUpon>Model1.tt</DependentUpon>
@@ -243,6 +269,27 @@
     <Compile Include="Controllers\ProductController.cs" />
     <Compile Include="C__MigrationHistory.cs">
       <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Farm.cs">
+      <DependentUpon>FarmSaleDB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="FarmProduct.cs">
+      <DependentUpon>FarmSaleDB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="FarmSaleDB.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>FarmSaleDB.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="FarmSaleDB.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>FarmSaleDB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="FarmSaleDB.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>FarmSaleDB.edmx</DependentUpon>
     </Compile>
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -265,6 +312,12 @@
     <Compile Include="Models\AccountRepo.cs" />
     <Compile Include="Models\FarmRepo.cs" />
     <Compile Include="Models\ProductRepo.cs" />
+    <Compile Include="Order.cs">
+      <DependentUpon>FarmSaleDB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Product.cs">
+      <DependentUpon>FarmSaleDB.tt</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -295,6 +348,8 @@
     <Content Include="Views\Shared\_SideBar.cshtml" />
     <Content Include="Views\Account\Index.cshtml" />
     <Content Include="Views\Product\List.cshtml" />
+    <Content Include="Views\Product\Single.cshtml" />
+    <Content Include="Views\Farm\Index.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -304,7 +359,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Views\Farm\" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
