--- a/Organic_Launch/Organic_Launch/Organic_Launch.csproj
+++ b/Organic_Launch/Organic_Launch/Organic_Launch.csproj
@@ -353,6 +353,7 @@
     <Content Include="Views\Farm\Create.cshtml" />
     <Content Include="Views\Farm\List.cshtml" />
     <Content Include="Views\Farm\Edit.cshtml" />
+    <Content Include="Views\Farm\Delete.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
